--- a/src/Components/Style.css
+++ b/src/Components/Style.css
@@ -89,7 +89,7 @@ html{
 .card{
     background-color: var(--secondary-color);
     border-radius: 1rem;
-    padding: 0.5rem;
+    padding: 1rem;
     margin-bottom: 10px;
     box-shadow: 0 5px 5px rgba(212,185,150,.5);
     transition: .5s;
@@ -118,9 +118,9 @@ html{
     bottom: 10px;
     left: 10px;
     right: 10px;
-   
+    background-color: var(--primary-color);
     color: var(--secondary-color);
     font-size: 13px;
     font-weight: bold;
-    padding: 0.2rem;
+    padding: 0.1rem;
 }
